Finish the call to action section and get the styling and spacing correct

--- a/style.css
+++ b/style.css
@@ -124,3 +124,42 @@ button {
     font-size: 20px;
     margin-right: 20px;
 }
+
+.section-4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+.call-action {
+    background-color: #3882f6;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+    border-radius: 8px;
+    height: 80px;
+    width: 600px;
+
+}
+.leftcall {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+}
+.leftcall h5 {
+    font-size: 17px;
+    font-weight: 600;
+    margin: 0;
+}
+.leftcall p {
+    font-size: 12px;
+    display: flex;
+    margin: 0;
+
+}
+.rightcall button {
+    border: 2px solid white;
+    margin-right: 50px;
+}
